--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,12 +2,13 @@
 
     <!-- Licenses -->
     <string name="licenses">Icons made by www.flaticon.com</string>
-
+    
     <!-- App strings -->
     <string name="app_name">TestWork</string>
 
     <!-- BottomAppBar strings -->
     <string name="fab_description">FAB Icon</string>
 
-
+    <!-- item_film strings -->
+    <string name="item_film_image_description">poster</string>
 </resources>
